2009-12-13  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/invert.c (mpn_invertapp): Split in _bc and _ni.
	(mpn_bc_invertapp): New function, the basecase.
	(mpn_ni_invertapp): New function, Newton iteration.
	(mpn_invert): Use mpn_ni_invertapp.

	* tune/tuneup.c (tune_invert): Min for INV_APPR_THRESHOLD.
	(tune_invertappr): Min for INV_NEWTON_THRESHOLD.

2009-12-12  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/mu_bdiv_qr.c (mpn_mu_bdiv_qr_itch): Rewrite.

2009-12-12  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/mpn/t-mulmod_bnm1.c (main): Disable B^n+1 stressing test
	for odd sizes.

	* mpn/generic/invert.c: Complete rewrite. Uses Newton iterations.
	* gmp-impl.h (mpn_invertappr): Added prototype and name-mangling.
	(mpn_invertappr_itch): Added prototype and name-mangling.
	(INV_APPR_THRESHOLD): Support for a new tunable const.
	* tune/speed.h (SPEED_ROUTINE_MPN_INVERTAPPR): New macro.
	(speed_mpn_invertappr): New function.
	* tune/common.c (speed_mpn_invertappr): New function.
	* tune/speed.c (routine): Add speed_mpn_invertappr.
	* tune/tuneup.c (tune_invertappr): New function: was tune_invert.
	(tune_invert): Now tune only INV_APPR_THRESHOLD.
	(all): Enable call to tune_invert and tune_invertappr.

2009-12-11  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/binvert.c: Use mpn_mulmod_bnm1 instead of FFT wrapping.
	Old, evidently broken wrapping code removed.
	* tune/tuneup.c (tune_binvert): Tune BINV_MULMOD_BNM1_THRESHOLD.
	* gmp-impl.h: Provide declarations for corresponding threshold var.

	* tests/mpn/t-bdiv.c (COUNT): Decrease to keep run time reasonable.

	* tune/tuneup.c (tune_invert): Tune INV_MULMOD_BNM1_THRESHOLD.
	* gmp-impl.h: Provide declarations for corresponding threshold var.

	* tests/mpn/t-mulmod_bnm1.c: Avoid a division by zero.

	* configure.in: Set up different paths for different 64-bit sparc
	processors.
	* mpn/sparc64/ultrasparc34/gmp-mparam.h: New file.

2009-12-10  Torbjorn Granlund  <tege@gmplib.org>
