@@ -25,61 +25,61 @@ along with the GNU MP Library.  If not, see http://www.gnu.org/licenses/.  */
 
 /* Generated by tuneup.c, 2009-12-13, gcc 4.2 */
 
-#define MUL_TOOM22_THRESHOLD             16
+#define MUL_TOOM22_THRESHOLD             18
 #define MUL_TOOM33_THRESHOLD             65
-#define MUL_TOOM44_THRESHOLD            169
+#define MUL_TOOM44_THRESHOLD            167
 
 #define SQR_BASECASE_THRESHOLD            0  /* always (native) */
 #define SQR_TOOM2_THRESHOLD              30
-#define SQR_TOOM3_THRESHOLD             102
-#define SQR_TOOM4_THRESHOLD             250
+#define SQR_TOOM3_THRESHOLD             101
+#define SQR_TOOM4_THRESHOLD             262
 
 #define MUL_FFT_TABLE  { 400, 800, 1600, 2816, 7168, 20480, 49152, 0 }
 #define MUL_FFT_MODF_THRESHOLD          400
 #define MUL_FFT_THRESHOLD              3456
 
-#define SQR_FFT_TABLE  { 336, 736, 1600, 2816, 7168, 20480, 49152, 0 }
+#define SQR_FFT_TABLE  { 336, 800, 1600, 2816, 7168, 20480, 49152, 0 }
 #define SQR_FFT_MODF_THRESHOLD          368
 #define SQR_FFT_THRESHOLD              2688
 
 #define MULLO_BASECASE_THRESHOLD          5
-#define MULLO_DC_THRESHOLD               21
+#define MULLO_DC_THRESHOLD               19
 #define MULLO_MUL_N_THRESHOLD          5472
 
 #define MULMOD_BNM1_THRESHOLD            14
 
-#define DC_DIV_QR_THRESHOLD              39
-#define DC_DIVAPPR_Q_THRESHOLD          135
-#define DC_BDIV_QR_THRESHOLD             36
-#define DC_BDIV_Q_THRESHOLD              68
-#define INV_NEWTON_THRESHOLD             17
-#define INV_MULMOD_BNM1_THRESHOLD       200
-#define INV_APPR_THRESHOLD               15
+#define DC_DIV_QR_THRESHOLD              36
+#define DC_DIVAPPR_Q_THRESHOLD          131
+#define DC_BDIV_QR_THRESHOLD             34
+#define DC_BDIV_Q_THRESHOLD              60
+#define INV_MULMOD_BNM1_THRESHOLD       108
+#define INV_NEWTON_THRESHOLD            149
+#define INV_APPR_THRESHOLD                9
 #define BINV_NEWTON_THRESHOLD           582
 #define BINV_MULMOD_BNM1_THRESHOLD        0  /* always when newton */
-#define REDC_1_TO_REDC_2_THRESHOLD       12
+#define REDC_1_TO_REDC_2_THRESHOLD       11
 #define REDC_2_TO_REDC_N_THRESHOLD       60
 
 #define MATRIX22_STRASSEN_THRESHOLD      21
-#define HGCD_THRESHOLD                  136
-#define GCD_DC_THRESHOLD                345
-#define GCDEXT_DC_THRESHOLD             416
+#define HGCD_THRESHOLD                  127
+#define GCD_DC_THRESHOLD                354
+#define GCDEXT_DC_THRESHOLD             382
 #define JACOBI_BASE_METHOD                1
 
 #define MOD_1_NORM_THRESHOLD              0  /* always */
 #define MOD_1_UNNORM_THRESHOLD            0  /* always */
-#define MOD_1_1_THRESHOLD                 5
-#define MOD_1_2_THRESHOLD                 6
+#define MOD_1_1_THRESHOLD                 4
+#define MOD_1_2_THRESHOLD                 5
 #define MOD_1_4_THRESHOLD                12
 #define USE_PREINV_DIVREM_1               1  /* native */
 #define USE_PREINV_MOD_1                  0
 #define DIVEXACT_1_THRESHOLD              0  /* always (native) */
 #define MODEXACT_1_ODD_THRESHOLD          0  /* always (native) */
 
-#define GET_STR_DC_THRESHOLD             15
-#define GET_STR_PRECOMPUTE_THRESHOLD     25
-#define SET_STR_DC_THRESHOLD            312
-#define SET_STR_PRECOMPUTE_THRESHOLD   2058
+#define GET_STR_DC_THRESHOLD             16
+#define GET_STR_PRECOMPUTE_THRESHOLD     26
+#define SET_STR_DC_THRESHOLD            517
+#define SET_STR_PRECOMPUTE_THRESHOLD   1639
 
 /* Generated 2009-01-12, gcc 4.2 */
 
