@@ -1042,22 +1042,18 @@ void
 tune_invertappr (void)
 {
   static struct param_t  param;
-  param.function = speed_mpn_invertappr;
 
+  param.function = speed_mpn_ni_invertappr;
+  param.name = "INV_MULMOD_BNM1_THRESHOLD";
+  param.min_size = 4;
+  param.max_size = 5000;
+  one (&inv_mulmod_bnm1_threshold, &param);
+
+  param.function = speed_mpn_invertappr;
   param.name = "INV_NEWTON_THRESHOLD";
   param.min_size = 3;
   param.max_size = 5000;
   one (&inv_newton_threshold, &param);
-
-  param.name = "INV_MULMOD_BNM1_THRESHOLD";
-  param.noprint = 1;
-  param.min_size = inv_newton_threshold;
-  param.max_size = 5000;
-  one (&inv_mulmod_bnm1_threshold, &param);
-  if (inv_mulmod_bnm1_threshold <= inv_newton_threshold)
-    print_define_remark (param.name, 0, "always when newton");
-  else
-    print_define (param.name, inv_mulmod_bnm1_threshold);
 }
 
 void
